# football-wc-2026

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
dashboard/: app.py
data/mpp/: README.md  mpp_cotes.csv
data/processed/: tm_value_panel.parquet  tm_value_panel_avail.parquet  wc2026.parquet
data/raw/: odds_2026-06-22.parquet  odds_2026-06-24.parquet  odds_2026-06-25.parquet
data/snapshots/: 2026-06-11.parquet  2026-06-12.parquet  2026-06-13.parquet  2026-06-14.parquet  2026-06-15.parquet  2026-06-16.parquet  2026-06-17.parquet  2026-06-18.parquet  2026-06-19.parquet  2026-06-20.parquet  2026-06-21.parquet  2026-06-22.parquet  2026-06-25.parquet
docs/: DECISIONS.md  MPP.md  OPERATIONS.md  ROADMAP.md
scripts/: daily_refresh.bat
src/wc2026/: pipeline.py  wc2026.py
src/wc2026/evaluation/: backtest.py  baselines.py  calibration.py  cumulative.py  metrics.py  odds_backtest.py  score_backtest.py  score_metrics.py  tournaments.py
src/wc2026/features/: build.py
src/wc2026/ingestion/: elo.py  historical.py  market_value.py  odds.py  odds_historical.py  teams.py  wikipedia.py
src/wc2026/models/: base.py  bayesian.py  blend.py  blend3.py  dixon_coles.py  elo_baseline.py  ensemble.py  knockout.py  lgbm_score.py  lightgbm_clf.py  market_value_model.py  negbin.py  odds_model.py  poisson.py  stacking.py
src/wc2026/mpp/: backtest.py  optimizer.py  scoring.py
tests/: test_knockout.py  test_score_dist.py
