[project]
name = "wc2026"
version = "0.1.0"
description = "World Cup 2026 match prediction system"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "streamlit>=1.36",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "matplotlib>=3.9",
    "plotly>=5.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
